@@ -4,6 +4,7 @@ Changes
 1.1.6 (TBD)
 -----------
 
+- Fix bug in ParsedPath.is_remote() reported in #1967.
 - The reproject() method accepts objects that provide `__array__` in addition
   to instances of numpy.ndarray (#1957, #1959).
 - Custom labels may be used with show_hist() by giving the `label` keyword
